@@ -110,6 +110,7 @@ Revision:
 * #739: changed the order of checks in IcmsMediaUploader::upload to check mimetype and imagetype before checking image resolution (Phoenyx)
 * #740: consider uploader result in doStoreFromDefaultForm to handle possible errors (Phoenyx)
 * #328: imProfile: png's are now working for pictures and tribes | ticket from addons (Phoenyx)
+* #713: fixed invalid argument warning in modulesadmin (installer and cp) (Phoenyx)
 
 ===2009-06-20 : 1.2 Alpha 2.1 ===
 '''Fixed'''
